resolve alignment and notification issue

--- a/src/component/UserList/userlist.scss
+++ b/src/component/UserList/userlist.scss
@@ -1,59 +1,81 @@
 .user_list_container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding-top: 4rem;
-    gap : 4rem ;
+   // align-items: center;
+    padding: 4rem;
+    gap : 3rem ;
     font-family: "Poppins", sans-serif; 
-    background-color: black; 
+    background-color:#002244; 
+    box-sizing: border-box;
 }
 .search_user{
+    position: relative;
     display: flex;
     flex-direction: column;
     width: 50%;
 }
-.list_users_containers{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 30px; 
+.search_input{
+    border: 1px solid #9f9e9e;
 }
+.search_input:focus{
+    border: 1px solid #9f9e9e;
+    outline: none;
+}
+.list_users_containers {
+   
+    display: grid;
+     grid-template-columns: repeat(3, 1fr); /* Default to 3 columns */
+      gap: 4rem  ;
+      align-items: center;
+      box-sizing: border-box;
+    
+  }
+
+  
+  @media (max-width: 900px) {
+    .list_users_containers {    
+        gap: 2rem ;
+            grid-template-columns: repeat(2, 1fr); /* 1 column for small screens */
+    }
+    @media (max-width: 560px) {
+        .list_users_containers {
+          grid-template-columns: 1fr; /* 1 column for small screens */
+        }
+    }
+  }
+  
 .template_user{
     display: flex;
     flex-direction: column;
     border: 1px solid #9f9e9e;
     padding: 1rem;
+    box-sizing: border-box;
+    
     border-radius: 10px;
-    gap: 1rem;
+    gap: 2rem;
+    max-width:  300px;
     cursor: pointer;
     transition: all 0.5s ease-in-out;
 }
+
 .template_user:hover{
     transform: scale(1.05);
     border: 1px solid #ffffff;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.3); 
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); 
 }
 
 .user_img{
-    width: 100%;
+    max-width: 100%;
     height: 150px;
     border-radius: 8px;
 }
 .user_list_headline{
+   color: rgb(255, 255, 255); 
     font-size: 3rem;
-    font-weight: 500 ;
+    font-weight: 700;
+  
 }
-.logout{
-    padding: 12px 16px;
-    border: 1px solid #9f9e9e;
-    border-radius: 8px;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-}
-.logout:hover{
-    transform: scale(1.05);
-}
+
 .container_markup{
     display: flex;
     align-items: center;
@@ -63,7 +85,7 @@
 }
 .first_name_user{
     font-size: 0.9rem;
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: 600;
 }
 .email_users{
@@ -74,23 +96,24 @@
     font-size: 1rem;
     font-weight: 500;
     color: white;
-    font-family: "Monaco" ,monospace;
+ 
 }
 span{
     color: white;
     cursor: pointer;
 }
 .edit_delete_button{
+    
     display: flex ;
-    width: 100%;
+    align-items: center ;
     gap: 0.5rem ;
 }
 .edit_details{
     width: 100%;
     border: 1px solid #9f9e9e;
     height: 1.5rem;
-    background-color: white;
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     cursor: pointer;
     border-radius: 5px;
 }
@@ -101,7 +124,7 @@ span{
 .pagination_section{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     gap: 1rem ;
 }
 .pagination_button{
@@ -187,4 +210,61 @@ input {
     display: flex;
     flex-direction: column;
     gap: 1rem ;
+  }
+
+  .search_icon {
+    position: absolute;
+    right: 10px; /* Position the icon to the right */
+    top: 50%;
+    transform: translateY(-50%); /* Center the icon vertically */
+    cursor: pointer;
+  }
+
+  // mobile responsive
+ 
+
+  @media (max-width: 768px) {
+
+    .user_list_container{
+        gap : 2rem ;
+        padding: 2rem;    
+    }
+    .container_markup{
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        color: white;
+        justify-content: space-between;
+    }
+    .user_list_headline{
+        font-size: 2rem;
+        font-weight: 500 ;
+    }
+    .modal_overlay{
+     
+ 
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); 
+    backdrop-filter: blur(5px); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+
+
+    }
+    .search_user{
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+  }
+
+  @media (min-width: 560px) {
+ 
+    
   }
